--- a/src/templates/galleryCard.hbs
+++ b/src/templates/galleryCard.hbs
@@ -1,11 +1,15 @@
-{{#each this}}
-
-{{!-- {Movie List Result Object} from https://developers.themoviedb.org/3/trending/get-trending --}}
-
-<li class="movies__list-item">
-    <img class="movie__poster" src="{{poster_path}}" alt="{{title}} poster" id="{{id}}" loading="lazy">
-
-    <p class=" movie__name">{{title}}</p>
-    <p class="movie__genre">{{genre_ids}} | {{release_date}}</p>
-</li>
+{{#each this.results}}
+  <li class='movies__list-item' id='{{id}}'>
+    <img
+      class='movie__poster'
+      src='https://image.tmdb.org/t/p/w500/{{poster_path}}'
+      alt='{{title}}'
+      loading='lazy'
+    />
+    <p class='movie__name'>{{title}}</p>
+    <p class='movie__genre'>{{genre_ids}}
+      |
+      {{release_date}}
+      <span class='movie__rating'>{{vote_average}}</span></p>
+  </li>
 {{/each}}
