Добавил запрос на получения жанров фильма

--- a/src/templates/galleryCard.hbs
+++ b/src/templates/galleryCard.hbs
@@ -7,7 +7,7 @@
       loading='lazy'
     />
     <p class='movie__name'>{{title}}</p>
-    <p class='movie__genre'>{{genre_ids}}
+    <p class='movie__genre'>{{genres.name}}
       |
       {{release_date}}
       <span class='movie__rating'>{{vote_average}}</span></p>
