--- a/src/templates/galleryCard.hbs
+++ b/src/templates/galleryCard.hbs
@@ -7,9 +7,11 @@
       loading='lazy'
     />
     <p class='movie__name'>{{title}}</p>
-    <p class='movie__genre'>{{genres.name}}
+    <p class='movie__genre'>{{ganre_ids}}
       |
       {{release_date}}
       <span class='movie__rating'>{{vote_average}}</span></p>
   </li>
 {{/each}}
+
+
