--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,4 @@
 @import './utils/variables';
 @import './components/gallery';
 @import './components/backdrop';
+@import './components/buttonOnTop';
