--- a/src/sass/components/_backdrop.scss
+++ b/src/sass/components/_backdrop.scss
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.25);
   z-index: 999;
 
@@ -12,12 +12,12 @@
   pointer-events: none;
 
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.show-modal {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: initial;
+  &.show-modal {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: initial;
+  }
 }
 
 // &.is-hidden .modal {
