--- a/src/sass/components/_modal-card.scss
+++ b/src/sass/components/_modal-card.scss
@@ -2,15 +2,13 @@ img {
   display: block;
 }
 
-.backdrop {
-  position: absolute;
-}
-
 .modal {
-  position: absolute;
-  /* top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); */
+  position: fixed;
+  // position: absolute;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
+
   width: 280px;
   height: 958px;
   padding: 48px 20px 40px 20px;
