--- a/src/sass/base/_reset-styles.scss
+++ b/src/sass/base/_reset-styles.scss
@@ -1,5 +1,18 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
 body {
-  font-family: $main-font;
+  font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
+  font-style: normal;
+  font-size: 12px;
+  line-height: 1.4;
+  
 }
 
 h1,
@@ -29,4 +42,10 @@ a {
 
 .list {
   list-style-type: none;
+}
+
+.img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
