добавил открытия модалки с карточкой

--- a/src/templates/modal-card.hbs
+++ b/src/templates/modal-card.hbs
@@ -1,43 +1,46 @@
-<div class="backdrop">
-    <div class="modal">
-        <button type="button" class="modal__close-button">
-            <svg class="modal__close-icon" width="14" height="14">
-                <use href="../images/vector.svg"></use>
-            </svg>
-        </button>
+<div class='modal'>
+  <button type='button' class='modal__close-button'>
+    <svg class='modal__close-icon' width='14' height='14'>
+      <use href='../images/vector.svg'></use>
+    </svg>
+  </button>
 
-        <div class="modal-wrap">
-            <img class='modal__poster-link' src='https://image.tmdb.org/t/p/w500/{{poster_path}}' alt='{{title}}'
-                loading='lazy' />
+  <div class='modal-wrap'>
+    <img
+      class='modal__poster-link'
+      src='https://image.tmdb.org/t/p/w500/{{poster_path}}'
+      alt='{{title}}'
+      loading='lazy'
+    />
 
-            <div class="modal-info">
-                <h2 class='modal-info__title'>{{title}}></h2>
+    <div class='modal-info'>
+      <h2 class='modal-info__title'>{{title}}></h2>
 
-                <ul class="modal-info__double-column list">
-                    <ul class="modal-info__title-list list">
-                        <li class="modal-info__title-item">Vote / Votes</li>
-                        <li class="modal-info__title-item">Popularity</li>
-                        <li class="modal-info__title-item">Original Title</li>
-                        <li class="modal-info__title-item">Genre</li>
-                    </ul>
-                    <ul class="modal-info__value-list list">
-                        <li class="modal-info__value-item"><span class="vote">{{vote_average}}</span> / <span
-                                class="votes">{{vote_count}}</span></li>
-                        <li class="modal-info__value-item">{{popularity}}</li>
-                        <li class="modal-info__value-item">{{original_title}}</li>
-                        <li class="modal-info__value-item">{{genres.name}}</li>
-                    </ul>
-                </ul>
+      <ul class='modal-info__double-column list'>
+        <ul class='modal-info__title-list list'>
+          <li class='modal-info__title-item'>Vote / Votes</li>
+          <li class='modal-info__title-item'>Popularity</li>
+          <li class='modal-info__title-item'>Original Title</li>
+          <li class='modal-info__title-item'>Genre</li>
+        </ul>
+        <ul class='modal-info__value-list list'>
+          <li class='modal-info__value-item'><span class='vote'>{{vote_average}}</span>
+            /
+            <span class='votes'>{{vote_count}}</span></li>
+          <li class='modal-info__value-item'>{{popularity}}</li>
+          <li class='modal-info__value-item'>{{original_title}}</li>
+          <li class='modal-info__value-item'>{{genres.name}}</li>
+        </ul>
+      </ul>
 
-                <h3 class="modal-info__description-title">ABOUT</h3>
+      <h3 class='modal-info__description-title'>ABOUT</h3>
 
-                <p class="modal-info__description">{{overview}}</p>
+      <p class='modal-info__description'>{{overview}}</p>
 
-                <div class="modal-button">
-                    <button type="button" class="modal-button__watched">ADD TO WATCHED</button>
-                    <button type="button" class="modal-button__queue">ADD TO QUEUE</button>
-                </div>
-            </div>
-        </div>
+      <div class='modal-button'>
+        <button type='button' class='modal-button__watched'>ADD TO WATCHED</button>
+        <button type='button' class='modal-button__queue'>ADD TO QUEUE</button>
+      </div>
     </div>
+  </div>
 </div>
