коррекция стилей и открытия модалки

--- a/src/templates/modal-card.hbs
+++ b/src/templates/modal-card.hbs
@@ -14,7 +14,7 @@
     />
 
     <div class='modal-info'>
-      <h2 class='modal-info__title'>{{title}}></h2>
+      <h2 class='modal-info__title'>{{title}}</h2>
 
       <ul class='modal-info__double-column list'>
         <ul class='modal-info__title-list list'>
