--- a/src/sass/components/_modal-card.scss
+++ b/src/sass/components/_modal-card.scss
@@ -4,29 +4,30 @@ img {
 
 .modal {
   position: fixed;
-  // position: absolute;
-  // top: 50%;
-  // left: 50%;
-  // transform: translate(-50%, -50%);
+  top: 20px;
+  left: 50%;
+  transform: translate(-50%);
 
   width: 280px;
-  height: 958px;
+  // height: 958px;
   padding: 48px 20px 40px 20px;
-  background-color: #fff1d6;
+  background-color: #ffffff;
 }
 
 @media screen and (min-width: 768px) {
   .modal {
+    top: 240px;
     width: 618px;
-    height: 562px;
+    // height: 562px;
     padding: 42px 28px 40px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .modal {
+    top: 100px;
     width: 882px;
-    height: 568px;
+    // height: 568px;
     padding: 50px 30px 40px;
   }
 }
@@ -70,7 +71,7 @@ img {
 
 @media screen and (min-width: 1024px) {
   .modal__poster-link {
-    height: 568px;
+    height: 478px;
     margin-right: 30px;
   }
 }
@@ -103,6 +104,7 @@ img {
 }
 
 .modal-info__title-list {
+  min-width: 70px;
   margin-right: 40px;
 }
 
