--- a/src/sass/components/_buttonOnTop.scss
+++ b/src/sass/components/_buttonOnTop.scss
@@ -1,11 +1,11 @@
-#buttonOnTop {
-  background: url('../images/buttonOnTop.png') no-repeat top left;
-  height: 80px;
-  width: 67px;
+.buttonOnTop {
+  width: 50px;
+  height: 50px;
   bottom: 30px;
   right: 20px;
   cursor: pointer;
   display: none;
   position: fixed;
   z-index: 999;
+  fill: #ff6b08;
 }
