--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,7 +18,7 @@
         </li>
       </ul>
     </ul>
-    <form action="">
+    <form>
       <ul class="search-item">
         <li class="searh-list list">
           <input class="search-input" type="text" placeholder="Поиск фильмов" />
