--- a/src/sass/components/_modal-card.scss
+++ b/src/sass/components/_modal-card.scss
@@ -46,6 +46,10 @@ img {
   cursor: pointer;
 }
 
+.modal__close-icon {
+  color: #000000;
+}
+
 @media screen and (min-width: 768px) {
   .modal-wrap {
     display: flex;
@@ -214,4 +218,11 @@ img {
   .modal-button__queue {
     width: 136px;
   }
+}
+
+.fixed-body {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
 }
