--- a/src/sass/layout/_header-search.scss
+++ b/src/sass/layout/_header-search.scss
@@ -1,54 +1,290 @@
-.search-item {
-    width: 336px;
+header {
+    width: 100%;
+    height: 230px;
+  }
+  
+  .header__background {
+    height: 100%;
+    background-color: black;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url('/images/header/header-bg-main-@1x-mobile.jpg');
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url('/images/header/header-bg-main-@2x-mobile.jpg');
+    }
+  }
+  
+  .library__background {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url('/images/header/header-bg-library-@1x-mobile.jpg');
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url('/images/header/header-bg-library-@2x-mobile.jpg');
+    }
+  }
+  
+  .header__container {
+    margin: 0 auto;
+    padding: 40px 20px;
+  }
+  
+  .header__wrapper {
     display: flex;
-    padding-top: 41px;
-    margin: auto;
-    padding-bottom: 97px;
-}
-
-.search-input {
-    color: #916a6a;
+    margin-bottom: 40px;
+  }
+  .logo-wrapper {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .logo__icon {
+    display: inline-block;
+    margin-right: 10px;
+  }
+  .logo__text {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 1.167;
+    color: #ffffff;
+    display: none;
+  }
+  
+  .site-nav {
+    margin-left: auto;
+    display: block;
+    margin-right: 30px;
+  }
+  
+  .header-button {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.17;
+    text-transform: uppercase;
+    color: #ffffff;
+    background-color: transparent;
+    border: none;
+    padding: 5px 0 0 0;
+    cursor: pointer;
+  }
+  
+  .home-button {
+    margin-right: 30px;
+  }
+  
+  .current {
+    border-bottom: 3px solid #ff6b08;
+  }
+  
+  .search__form {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+  }
+  
+  .search__input-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end; 
+    flex-wrap: no-wrap;
+    margin: 0 auto;
+    position: relative;
     width: 280px;
-    height: 16px;
+    opacity: 1;
+    transition: opacity 1s ease-in-out;
+  
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: 6px;
+      right: 0;
+      width: 12px;
+      height: 12px;
+      background-image: url('/images/search.svg');
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+  
+  }
+  
+  .search__input {
+    width: 100%;
+    padding-left: 3px;
+    border: none;
+    border-bottom: 0.5px solid #ffffff;
+    background-color: transparent;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.14;
+    color: #ffffff;
+  
+    &::placeholder {
+      font-family: 'Roboto', sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 1.14;
+      color: #ffffff;
+      opacity: 0.6;
+    }
+  
+    &:focus::placeholder {
+      color: transparent;
+    }
+  
+    &:focus {
+      outline: none;
+    }
+  }
+  
+  .btn-search {
+    position: absolute;
+    top: 0;
+    right: -10px;
+    color: #ffffff;
     background-color: transparent;
     border: none;
-    border-bottom: 1px solid #FFFFFF;
-}
+    padding: 0 10px;
+    cursor: pointer;
+  }
+  
 
-.search-img {
-    width: 12px;
-    height: 12px;
-    fill: #FFFFFF;
-}
+  @media screen and (min-width: 768px) {
+    .header__container {
+      padding-bottom: 60px;
+      padding-left: 70px;
+      padding-right: 75px;
+    }
+  
+    .header__background {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url('/images/header/header-bg-main-@1x-tablet.jpg');
+      
+        @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: linear-gradient(
+            rgba(0, 0, 0, 0.56),
+            rgba(0, 0, 0, 0.56)
+          ),
+          url('/images/header/header-bg-main-@2x-tablet.jpg');
+      }
+    }
+  
+    .library__background {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url('/images/header/header-bg-library-@1x-tablet.jpg');
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: linear-gradient(
+            rgba(0, 0, 0, 0.56),
+            rgba(0, 0, 0, 0.56)
+          ),
+          url('/images/header/header-bg-library-@2x-tablet.jpg');
+      }
+    }
+  
+    .logo__text {
+      display: inline;
+    }
+  
+    .search__input-wrapper {
+      width: 336px;
+    }
+  }
+  
+  @media screen and (min-width: 1024px) {
+    .header__background {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url('/images/header/header-bg-main-@1x-desktop.jpg');
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: linear-gradient(
+            rgba(0, 0, 0, 0.56),
+            rgba(0, 0, 0, 0.56)
+          ),
+          url('/images/header/header-bg-main-@2x-desktop.jpg');
+      }
+    }
+  
+    .library__background {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url('/images/header/header-bg-library-@1x-desktop.jpg');
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        background-image: linear-gradient(
+            rgba(0, 0, 0, 0.56),
+            rgba(0, 0, 0, 0.56)
+          ),
+          url('/images/header/header-bg-library-@2x-desktop.jpg');
+      }
+    }
+  }
+  
 
-.btn-search {
-    background-color: transparent;
-    background-size: 0%;
-    border: none;
-    border-bottom: 1px solid #FFFFFF;
-}
 
-@media screen and (min-width:768px) {
-    .text {
-        display: block;
-    }
-    .text {
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 30px;
-        line-height: 35px;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        color: #FFFFFF;
-    }
-    .search-input {
-        color: #916a6a;
-        width: 320px;
-        height: 16px;
-        background-color: transparent;
-        border: none;
-        border-bottom: 1px solid #FFFFFF;
-    }
-}
+// .search-item {
+//     width: 336px;
+//     display: flex;
+//     padding-top: 41px;
+//     margin: auto;
+//     padding-bottom: 97px;
+// }
+
+// .search-input {
+//     color: #916a6a;
+//     width: 280px;
+//     height: 16px;
+//     background-color: transparent;
+//     border: none;
+//     border-bottom: 1px solid #FFFFFF;
+// }
+
+// .search-img {
+//     width: 12px;
+//     height: 12px;
+//     fill: #FFFFFF;
+// }
+
+// .btn-search {
+//     background-color: transparent;
+//     background-size: 0%;
+//     border: none;
+//     border-bottom: 1px solid #FFFFFF;
+// }
+
+// @media screen and (min-width:768px) {
+//     .text {
+//         display: block;
+//     }
+//     .text {
+//         font-family: Roboto;
+//         font-style: normal;
+//         font-weight: 500;
+//         font-size: 30px;
+//         line-height: 35px;
+//         display: flex;
+//         align-items: center;
+//         text-align: center;
+//         color: #FFFFFF;
+//     }
+//     .search-input {
+//         color: #916a6a;
+//         width: 320px;
+//         height: 16px;
+//         background-color: transparent;
+//         border: none;
+//         border-bottom: 1px solid #FFFFFF;
+//     }
+// }
