сделал поиск с лодаш

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,6 @@
   <div class="header__background">
     <div class="header__container container">
       <div class="header__wrapper">
-        
         <!-- LOGO -->
         <div class="logo-wrapper">
           <a class="logo link" href="./index" aria-label="filmoteka logo">
@@ -12,7 +11,7 @@
             <span class="logo__text">Filmoteka </span>
           </a>
         </div>
-<!-- SITE NAVIGATION - HOME/LIBRARY BUTTONS -->
+        <!-- SITE NAVIGATION - HOME/LIBRARY BUTTONS -->
         <nav class="site-nav">
           <button
             id="home-button"
@@ -33,15 +32,10 @@
         </nav>
       </div>
 
-<!-- SEARCH-INPUT CONTAINER -->
+      <!-- SEARCH-INPUT CONTAINER -->
       <div class="search-container">
         <span class="search__input-wrapper">
-          <svg
-            class="microphone"
-            width="40"
-            height="40"
-            aria-label="voice search"
-          >
+          <svg class="microphone" width="40" height="40" aria-label="voice search">
             <use href="./images/sprite.svg#microphone"></use>
           </svg>
 
@@ -58,17 +52,14 @@
       </div>
 
       <!-- WATCHED/QUEUE BUTTONS -->
-      <div class="button-container "> <!-- оставила класс без visually-hidden для демонстрации -->
-        <button class="button watched-button" type="button">WATCHED</button>
-        <button class="button queue-button" type="button">QUEUE</button>
+      <div class="button-container">
+        <!-- оставила класс без visually-hidden для демонстрации -->
+        <button class="button watched-button visually-hidden" type="button">WATCHED</button>
+        <button class="button queue-button visually-hidden" type="button">QUEUE</button>
       </div>
     </div>
   </div>
 </header>
-
-
-
-
 
 <!-- <header class="header">
   <div class="container">
