--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,25 @@
 <footer class="footer">
+  <div class="footer__container container">
+    <p class="footer__container__copyright">
+      &copy 2020 | All Rights Reserved |
+    </p>
+    <p class="footer_container__authors">
+      Developed with<svg
+        class="footer_container__authors__svg"
+        width="14"
+        height="13"
+      >
+        <use href="./images/sprite.svg#heart"></use>
+      </svg>
+      <button class="footer_container__authors__button" type="button">
+        by GoIT Students
+      </button>
+    </p>
+  </div>
+</footer>
+
+<!-- 
+<footer class="footer">
   <div class="container">
     <ul class="footer-item">
       <li class="list footer-text">
@@ -17,4 +38,4 @@
       </li>
     </ul>
   </div>
-</footer>
+</footer> -->
