--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,38 +1,107 @@
-.svg-footer {
-    fill: #FF4500;
-    width: 14px;
-    height: 12px;
-    padding-right: 10px;
-}
 
-.footer-item {
-    display: flex;
-    margin: 0 auto;
-    justify-content: center;
-    padding-top: 30px;
-    padding-bottom: 30px;
-}
-
-.footer-text {
-    padding-right: 10px;
-}
-
-.footers-text {
-    padding-right: 3px;
-}
-
-.footer {
-    background-color: #F7F7F7;
-}
-
-.link-footer {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 19px;
-    /* identical to box height */
-    display: flex;
-    align-items: center;
+.wrap-container {
+    padding-bottom: 100px;
+    min-height: 100vh;
+  }
+  
+  .footer {
+    // width: 100%;
+    // height: 100px;
+    padding: 30px 10px;
+    background-color: #f7f7f7;
     color: #545454;
+    font-size: 14px;
+  }
+  .footer__container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+  }
+  .footer_container__authors {
+    margin-top: 10px;
+    
+  }
+  .footer_container__authors__svg {
+    margin: 0 10px;
+    animation: beat .30s 
+    infinite alternate;
+	transform-origin: center;
+   
+  }
+
+  @keyframes beat{
+	to { transform: scale(1.5); }
 }
+
+  .footer_container__authors__button {
+    border: none;
+    background-color: initial;
+    cursor: pointer;
+  
+    text-decoration: underline;
+    color: #545454;
+  }
+  
+  @media screen and (min-width: 768px) {
+    .wrap-container {
+      padding-bottom: 70px;
+    }
+    .footer {
+      height: 77px;
+  
+      font-size: 16px;
+    }
+    .footer__container {
+      flex-direction: row;
+    }
+    .footer_container__authors {
+      margin-top: 0;
+      margin-left: 4px;
+    }
+  }
+  
+
+
+
+
+// .svg-footer {
+//     fill: #FF4500;
+//     width: 14px;
+//     height: 12px;
+//     padding-right: 10px;
+// }
+
+// .footer-item {
+//     display: flex;
+//     margin: 0 auto;
+//     justify-content: center;
+//     padding-top: 30px;
+//     padding-bottom: 30px;
+// }
+
+// .footer-text {
+//     padding-right: 10px;
+// }
+
+// .footers-text {
+//     padding-right: 3px;
+// }
+
+// .footer {
+//     background-color: #F7F7F7;
+// }
+
+// .link-footer {
+//     font-family: Roboto;
+//     font-style: normal;
+//     font-weight: normal;
+//     font-size: 16px;
+//     line-height: 19px;
+//     /* identical to box height */
+//     display: flex;
+//     align-items: center;
+//     color: #545454;
+// }
