--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import './base/visually-hidden';
 
 // COMPONENTS
+@import './components/loader';
 @import './components/backdrop';
 @import './components/buttonOnTop';
 @import './components/gallery';
