--- a/src/sass/components/_modal-card.scss
+++ b/src/sass/components/_modal-card.scss
@@ -6,7 +6,7 @@ img {
   position: fixed;
   top: 20px;
   left: 50%;
-  transform: translate(-50%);
+  transform: translateX(-50%);
 
   width: 280px;
   // height: 958px;
@@ -16,7 +16,7 @@ img {
 
 @media screen and (min-width: 768px) {
   .modal {
-    top: 240px;
+    top: 230px;
     width: 618px;
     // height: 562px;
     padding: 42px 28px 40px;
@@ -39,7 +39,10 @@ img {
   width: 30px;
   height: 30px;
 
-  /* background-color: rgb(150, 150, 150); */
+  background-color: transparent;
+  background-image: url('../images/close-icon.svg');
+  background-position: center;
+  background-repeat: no-repeat;
   border: none;
   border-radius: 50%;
 
@@ -99,33 +102,27 @@ img {
   }
 }
 
-.modal-info__double-column {
-  display: flex;
-  /* justify-content: space-between; */
+.modal-info__list {
   margin-bottom: 20px;
 
   line-height: 1.33;
 }
 
-.modal-info__title-list {
-  min-width: 70px;
-  margin-right: 40px;
-}
+.modal-info__item {
+  display: flex;
+  color: #8c8c8c;
 
-@media screen and (min-width: 1024px) {
-  .modal-info__title-list {
-    margin-right: 84px;
+  &:not(:last-child) {
+    margin-bottom: 10px;
   }
 }
 
-.modal-info__title-item,
-.modal-info__value-list li:first-child {
-  color: #8c8c8c;
+.modal-info__title-item {
+  min-width: 110px;
 }
 
-.modal-info__title-item:not(:last-child),
-.modal-info__value-item:not(:last-child) {
-  margin-bottom: 10px;
+.modal-info__value-item {
+  color: #000000;
 }
 
 .vote {
@@ -149,6 +146,23 @@ img {
 .modal-info__description {
   max-height: 362px;
   margin-bottom: 20px;
+  padding-right: 6px;
+  overflow-y: hidden;
+
+  &:hover,
+  &:focus {
+    overflow-y: auto;
+  }
+
+  &::-webkit-scrollbar {
+    width: 5px;
+    background-color: #f8f8f8;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #eeeeee;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -163,66 +177,50 @@ img {
   }
 }
 
-.modal-button {
+.modal-buttons {
   display: flex;
   justify-content: space-between;
 }
 
 @media screen and (min-width: 1024px) {
-  .modal-button {
-    display: block;
+  .modal-buttons {
+    display: inline;
   }
 }
 
-.modal-button__watched,
-.modal-button__queue {
+.modal-button {
   width: 112px;
   height: 44px;
-  border-radius: 5px;
+  padding: 0;
 
-  font-family: 'Roboto', sans-serif;
-}
-
-.modal-button__watched {
-  color: #ffffff;
-  background-color: #ff6b01;
-  border: 1px solid #ff6b01;
-}
-
-@media screen and (min-width: 768px) {
-  .modal-button__watched {
-    padding: 0;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .modal-button__watched {
-    margin-right: 15px;
-  }
-}
-
-.modal-button__queue {
   background-color: #fff;
   border: 1px solid #000000;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
-  .modal-button__watched,
-  .modal-button__queue {
+  .modal-button {
     width: 125px;
   }
 }
 
 @media screen and (min-width: 1024px) {
-  .modal-button__watched,
-  .modal-button__queue {
+  .modal-button {
     width: 136px;
+    &:first-child {
+      margin-right: 15px;
+    }
   }
+}
+
+.modal-button__checked {
+  color: #ffffff;
+  background-color: #ff6b01;
+  border: 1px solid #ff6b01;
 }
 
 .fixed-body {
   overflow: hidden;
-  position: fixed;
-  width: 100%;
-  height: 100%;
+  max-height: 100vh;
 }
