--- a/src/sass/components/_loader.scss
+++ b/src/sass/components/_loader.scss
@@ -1,31 +1,38 @@
-.loader-wrapper {
-  width: 100%;
-  height: 100%;
-  background: white;
+.preloader {
   position: fixed;
+  left: 0;
   top: 0;
-  z-index: 100;
-  transition: 0.6s;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  background: #e0e0e0;
+  z-index: 1001;
 }
 
-.loader {
-  width: 75px;
-  height: 75px;
-  border: 10px solid transparent;
-  border-radius: 50%;
-  border-left-color: #ff6b08;
-  animation: loader 1.3s linear infinite;
+.preloader__image {
+  position: relative;
+  fill: #ff6b08;
+  top: 50%;
+  left: 50%;
+  width: 70px;
+  height: 70px;
+  margin-top: -35px;
+  margin-left: -35px;
+  text-align: center;
+  animation: preloader-rotate 2s infinite linear;
 }
 
-@keyframes loader {
+@keyframes preloader-rotate {
   100% {
     transform: rotate(360deg);
   }
 }
 
-.hide {
+.loaded_hiding .preloader {
+  transition: 0.3s opacity;
   opacity: 0;
+}
+
+.loaded .preloader {
+  display: none;
 }
