add header library

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,6 +13,7 @@
         </div>
         <!-- SITE NAVIGATION - HOME/LIBRARY BUTTONS -->
         <nav class="site-nav">
+          <a href="./index">
           <button
             id="home-button"
             class="header-button home-button current"
@@ -21,6 +22,7 @@
           >
             Home
           </button>
+          </a>
           <button
             id="library-button"
             class="header-button library-button"
@@ -54,46 +56,9 @@
       <!-- WATCHED/QUEUE BUTTONS -->
       <div class="button-container">
         <!-- оставила класс без visually-hidden для демонстрации -->
-        <button class="button watched-button visually-hidden" type="button">WATCHED</button>
+        <button class="button watched-button visually-hidden activeBtn" type="button">WATCHED</button>
         <button class="button queue-button visually-hidden" type="button">QUEUE</button>
       </div>
     </div>
   </div>
 </header>
-
-<!-- <header class="header">
-  <div class="container">
-    <ul class="header-item">
-      <ul class="logo-item">
-        <li class="logo-list list">
-          <img class="logo-img" src="./images/film.png" alt="logo" />
-        </li>
-        <li class="logo-list list">
-          <p class="text">Filmoteka</p>
-        </li>
-      </ul>
-      <ul class="header-link">
-        <li class="link-list list current">
-          <a class="link link-text" href="index.html">HOME</a>
-        </li>
-        <li class="link-list list">
-          <a class="link link-text" href="">MY LIBRARY</a>
-        </li>
-      </ul>
-    </ul>
-    <form>
-      <ul class="search-item">
-        <li class="searh-list list">
-          <input class="search-input" type="text" placeholder="Поиск фильмов" />
-        </li>
-        <li class="searh-list list">
-          <button class="btn-search" type="submit">
-            <svg class="search-img">
-              <use href="./images/symbol-defs.svg#icon-search"></use>
-            </svg>
-          </button>
-        </li>
-      </ul>
-    </form>
-  </div>
-</header> -->
