--- a/src/sass/layout/_header-search.scss
+++ b/src/sass/layout/_header-search.scss
@@ -1,238 +1,226 @@
 header {
-    width: 100%;
-    height: 230px;
+  width: 100%;
+  height: 230px;
+}
+
+.header__background {
+  height: 100%;
+  background-color: black;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+    url('/images/header/header-bg-main-@1x-mobile.jpg');
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url('/images/header/header-bg-main-@2x-mobile.jpg');
   }
-  
-  .header__background {
-    height: 100%;
-    background-color: black;
-    background-size: cover;
+}
+
+.library__background {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+    url('/images/header/header-bg-library-@1x-mobile.jpg');
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url('/images/header/header-bg-library-@2x-mobile.jpg');
+  }
+}
+
+.header__container {
+  margin: 0 auto;
+  padding: 40px 20px;
+}
+
+.header__wrapper {
+  display: flex;
+  margin-bottom: 40px;
+}
+.logo-wrapper {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo__icon {
+  display: inline-block;
+  margin-right: 10px;
+}
+.logo__text {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 1.167;
+  color: #ffffff;
+  display: none;
+  &:hover {
+    color: #ff6b01;
+    transition: All 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+.site-nav {
+  margin-left: auto;
+  display: block;
+  margin-right: 30px;
+}
+
+.header-button {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.17;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: transparent;
+  border: none;
+  padding: 5px 0 0 0;
+  cursor: pointer;
+}
+
+.home-button {
+  margin-right: 30px;
+}
+
+.current {
+  border-bottom: 3px solid #ff6b08;
+}
+
+.search__form {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.search__input-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  flex-wrap: no-wrap;
+  margin: 0 auto;
+  position: relative;
+  width: 280px;
+  opacity: 1;
+  transition: opacity 1s ease-in-out;
+
+  &::after {
+    content: '';
+    position: absolute;
+    bottom: 6px;
+    right: 0;
+    width: 12px;
+    height: 12px;
+    background-image: url('/images/search.svg');
     background-repeat: no-repeat;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-      url('/images/header/header-bg-main-@1x-mobile.jpg');
-    @media screen and (min-device-pixel-ratio: 2),
-      screen and (min-resolution: 192dpi),
-      screen and (min-resolution: 2dppx) {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-        url('/images/header/header-bg-main-@2x-mobile.jpg');
-    }
+    background-size: contain;
   }
-  
-  .library__background {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-      url('/images/header/header-bg-library-@1x-mobile.jpg');
-    @media screen and (min-device-pixel-ratio: 2),
-      screen and (min-resolution: 192dpi),
-      screen and (min-resolution: 2dppx) {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-        url('/images/header/header-bg-library-@2x-mobile.jpg');
-    }
-  }
-  
-  .header__container {
-    margin: 0 auto;
-    padding: 40px 20px;
-  }
-  
-  .header__wrapper {
-    display: flex;
-    margin-bottom: 40px;
-  }
-  .logo-wrapper {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .logo__icon {
-    display: inline-block;
-    margin-right: 10px;
-  }
-  .logo__text {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    font-size: 30px;
-    line-height: 1.167;
-    color: #ffffff;
-    display: none;
-  }
-  
-  .site-nav {
-    margin-left: auto;
-    display: block;
-    margin-right: 30px;
-  }
-  
-  .header-button {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.17;
-    text-transform: uppercase;
-    color: #ffffff;
-    background-color: transparent;
-    border: none;
-    padding: 5px 0 0 0;
-    cursor: pointer;
-  }
-  
-  .home-button {
-    margin-right: 30px;
-  }
-  
-  .current {
-    border-bottom: 3px solid #ff6b08;
-  }
-  
-  .search__form {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-  }
-  
-  .search__input-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end; 
-    flex-wrap: no-wrap;
-    margin: 0 auto;
-    position: relative;
-    width: 280px;
-    opacity: 1;
-    transition: opacity 1s ease-in-out;
-  
-    &::after {
-      content: '';
-      position: absolute;
-      bottom: 6px;
-      right: 0;
-      width: 12px;
-      height: 12px;
-      background-image: url('/images/search.svg');
-      background-repeat: no-repeat;
-      background-size: contain;
-    }
-  
-  }
-  
-  .search__input {
-    width: 100%;
-    padding-left: 3px;
-    border: none;
-    border-bottom: 0.5px solid #ffffff;
-    background-color: transparent;
+}
+
+.search__input {
+  width: 100%;
+  padding-left: 3px;
+  border: none;
+  border-bottom: 0.5px solid #ffffff;
+  background-color: transparent;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  color: #ffffff;
+
+  &::placeholder {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.14;
     color: #ffffff;
-  
-    &::placeholder {
-      font-family: 'Roboto', sans-serif;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 1.14;
-      color: #ffffff;
-      opacity: 0.6;
-    }
-  
-    &:focus::placeholder {
-      color: transparent;
-    }
-  
-    &:focus {
-      outline: none;
-    }
+    opacity: 0.6;
   }
-  
-  .btn-search {
-    position: absolute;
-    top: 0;
-    right: -10px;
-    color: #ffffff;
-    background-color: transparent;
-    border: none;
-    padding: 0 10px;
-    cursor: pointer;
-  }
-  
 
-  @media screen and (min-width: 768px) {
-    .header__container {
-      padding-bottom: 60px;
-      padding-left: 70px;
-      padding-right: 75px;
-    }
-  
-    .header__background {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-        url('/images/header/header-bg-main-@1x-tablet.jpg');
-      
-        @media screen and (min-device-pixel-ratio: 2),
-        screen and (min-resolution: 192dpi),
-        screen and (min-resolution: 2dppx) {
-        background-image: linear-gradient(
-            rgba(0, 0, 0, 0.56),
-            rgba(0, 0, 0, 0.56)
-          ),
-          url('/images/header/header-bg-main-@2x-tablet.jpg');
-      }
-    }
-  
-    .library__background {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-        url('/images/header/header-bg-library-@1x-tablet.jpg');
-      @media screen and (min-device-pixel-ratio: 2),
-        screen and (min-resolution: 192dpi),
-        screen and (min-resolution: 2dppx) {
-        background-image: linear-gradient(
-            rgba(0, 0, 0, 0.56),
-            rgba(0, 0, 0, 0.56)
-          ),
-          url('/images/header/header-bg-library-@2x-tablet.jpg');
-      }
-    }
-  
-    .logo__text {
-      display: inline;
-    }
-  
-    .search__input-wrapper {
-      width: 336px;
-    }
+  &:focus::placeholder {
+    color: transparent;
   }
-  
-  @media screen and (min-width: 1024px) {
-    .header__background {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-        url('/images/header/header-bg-main-@1x-desktop.jpg');
-      @media screen and (min-device-pixel-ratio: 2),
-        screen and (min-resolution: 192dpi),
-        screen and (min-resolution: 2dppx) {
-        background-image: linear-gradient(
-            rgba(0, 0, 0, 0.56),
-            rgba(0, 0, 0, 0.56)
-          ),
-          url('/images/header/header-bg-main-@2x-desktop.jpg');
-      }
-    }
-  
-    .library__background {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
-        url('/images/header/header-bg-library-@1x-desktop.jpg');
-      @media screen and (min-device-pixel-ratio: 2),
-        screen and (min-resolution: 192dpi),
-        screen and (min-resolution: 2dppx) {
-        background-image: linear-gradient(
-            rgba(0, 0, 0, 0.56),
-            rgba(0, 0, 0, 0.56)
-          ),
-          url('/images/header/header-bg-library-@2x-desktop.jpg');
-      }
-    }
-  }
-  
 
+  &:focus {
+    outline: none;
+  }
+}
+
+.btn-search {
+  position: absolute;
+  top: 0;
+  right: -10px;
+  color: #ffffff;
+  background-color: transparent;
+  border: none;
+  padding: 0 10px;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .header__container {
+    padding-bottom: 60px;
+    padding-left: 70px;
+    padding-right: 75px;
+  }
+
+  .header__background {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url('/images/header/header-bg-main-@1x-tablet.jpg');
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url('/images/header/header-bg-main-@2x-tablet.jpg');
+    }
+  }
+
+  .library__background {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url('/images/header/header-bg-library-@1x-tablet.jpg');
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url('/images/header/header-bg-library-@2x-tablet.jpg');
+    }
+  }
+
+  .logo__text {
+    display: inline;
+  }
+
+  .search__input-wrapper {
+    width: 336px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .header__background {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url('/images/header/header-bg-main-@1x-desktop.jpg');
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url('/images/header/header-bg-main-@2x-desktop.jpg');
+    }
+  }
+
+  .library__background {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+      url('/images/header/header-bg-library-@1x-desktop.jpg');
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
+        url('/images/header/header-bg-library-@2x-desktop.jpg');
+    }
+  }
+}
 
 // .search-item {
 //     width: 336px;
