--- a/src/sass/layout/_header-search.scss
+++ b/src/sass/layout/_header-search.scss
@@ -19,6 +19,10 @@ header {
 }
 
 .library__background {
+  height: 100%;
+  background-color: black;
+  background-size: cover;
+  background-repeat: no-repeat;
   background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
     url('/images/header/header-bg-library-@1x-mobile.jpg');
   @media screen and (min-device-pixel-ratio: 2),
