--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -141,6 +141,10 @@ header {
 }
 
 .library__background {
+  height: 100%;
+  background-color: black;
+  background-size: cover;
+  background-repeat: no-repeat;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.56)), to(rgba(0, 0, 0, 0.56))), url("/images/header/header-bg-library-@1x-mobile.jpg");
   background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)), url("/images/header/header-bg-library-@1x-mobile.jpg");
 }
