--- a/src/templates/modal-card.hbs
+++ b/src/templates/modal-card.hbs
@@ -49,8 +49,8 @@
       <p class='modal-info__description'>{{overview}}</p>
 
       <div class='modal-buttons'>
-        <button type='button' class='modal-button'>ADD TO WATCHED</button>
-        <button type='button' class='modal-button'>ADD TO QUEUE</button>
+        <button type='button' class='modal-button watched-button'>ADD TO WATCHED</button>
+        <button type='button' class='modal-button queue-button'>ADD TO QUEUE</button>
       </div>
     </div>
   </div>
