добавлено модальное окно футера

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -11,9 +11,9 @@
       >
         <use href="./images/sprite.svg#heart"></use>
       </svg>
-      <button class="footer_container__authors__button" type="button">
+      <a href="#" data-modal-open class="footer_container__authors__link" >
         by GoIT Students
-      </button>
+      </a>
     </p>
   </div>
 </footer>
