Добавил поиск по сабмиту

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,7 +35,7 @@
       </div>
 
       <!-- SEARCH-INPUT CONTAINER -->
-      <form class="search">
+      <form class="search-form">
         <div class="search-container">
           <span class="search__input-wrapper">
             <svg class="microphone" width="40" height="40" aria-label="voice search">
@@ -45,7 +45,7 @@
             <input
               class="search__input"
               type="text"
-              name="search"
+              name="query"
               autocomplete="off"
               aria-label="Search films "
               placeholder="Поиск фильмов"
@@ -54,7 +54,6 @@
           </span>
         </div>
       </form>
-
       <!-- WATCHED/QUEUE BUTTONS -->
       <div class="button-container">
         <!-- оставила класс без visually-hidden для демонстрации -->
