--- a/src/partials/footer_modal_students.html
+++ b/src/partials/footer_modal_students.html
@@ -8,14 +8,11 @@
     <section class="modal__content__footer">
       <ul class="students-list">
         <li>
+          <!-- <img src="https://blog.123rf.com/wp-content/uploads/2016/10/Caricature8f.jpg" class="students-list__item__image"/> -->
           <img
-            src="https://blog.123rf.com/wp-content/uploads/2016/10/Caricature8f.jpg"
+            src="https://raw.githubusercontent.com/od-frontender/filmoteka/main/src/images/footer_modal_students/Anatoliy%20Buriak.png"
             class="students-list__item__image"
           />
-          <!-- </img
-            src="../images/footer_modal_students/Anatoliy Buriak.png"
-            class="students-list__item__image"
-          /> -->
           <div class="students-list__item__descr">
             Anatoliy Buriak
             <a
@@ -28,7 +25,7 @@
 
         <li class="students-list__item">
           <img
-            src="https://blog.123rf.com/wp-content/uploads/2016/10/Caricature8f.jpg"
+            src="https://raw.githubusercontent.com/od-frontender/filmoteka/main/src/images/footer_modal_students/Viachesl%D0%B0v_Sosnovskiy.jpg"
             class="students-list__item__image"
           />
           <!-- <img src="../images/footer_modal_students/Viacheslаv_Sosnovskiy.jpg" class="students-list__item__image" /> -->
@@ -44,7 +41,7 @@
 
         <li class="students-list__item">
           <img
-            src="https://blog.123rf.com/wp-content/uploads/2016/10/Caricature8f.jpg"
+            src="https://raw.githubusercontent.com/od-frontender/filmoteka/main/src/images/footer_modal_students/Anna%20Sabbaghzadeh.jpg"
             class="students-list__item__image"
           />
           <!-- <img src="../images/footer_modal_students/Anna Sabbaghzadeh.jpg" class="students-list__item__image" /> -->
@@ -60,7 +57,7 @@
 
         <li class="students-list__item">
           <img
-            src="https://blog.123rf.com/wp-content/uploads/2016/10/Caricature8f.jpg"
+            src="https://raw.githubusercontent.com/od-frontender/filmoteka/main/src/images/footer_modal_students/Oleksandr%20Smetana.jpg"
             class="students-list__item__image"
           />
           <!-- <img src="../images/footer_modal_students/Oleksandr Smetana.jpg" class="students-list__item__image" /> -->
@@ -76,7 +73,7 @@
 
         <li class="students-list__item">
           <img
-            src="https://blog.123rf.com/wp-content/uploads/2016/10/Caricature8f.jpg"
+            src="https://raw.githubusercontent.com/od-frontender/filmoteka/main/src/images/footer_modal_students/Vitalii%20Dovhopolyk.jpg"
             class="students-list__item__image"
           />
           <!-- <img src="../images/footer_modal_students/Vitalii Dovhopolyk.jpg" class="students-list__item__image" /> -->
@@ -92,7 +89,7 @@
 
         <li class="students-list__item">
           <img
-            src="https://blog.123rf.com/wp-content/uploads/2016/10/Caricature8f.jpg"
+            src="https://raw.githubusercontent.com/od-frontender/filmoteka/main/src/images/footer_modal_students/Anatolii%20Bobrovskiy.jpg"
             class="students-list__item__image"
           />
           <!-- <img src="../images/footer_modal_students/Anatolii Bobrovskiy.jpg" class="students-list__item__image" /> -->
