Добавил кнопку loadMore для главной страницы

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,16 +13,16 @@
         </div>
         <!-- SITE NAVIGATION - HOME/LIBRARY BUTTONS -->
         <nav class="site-nav">
-          <a href="./index">
-            <button
-              id="home-button"
-              class="header-button home-button current"
-              type="button"
-              aria-label="main page switch"
-            >
-              Home
-            </button>
-          </a>
+          <!-- <a href="./index"> -->
+          <button
+            id="home-button"
+            class="header-button home-button current"
+            type="button"
+            aria-label="main page switch"
+          >
+            Home
+          </button>
+          <!-- </a> -->
           <button
             id="library-button"
             class="header-button library-button"
