--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,11 +4,11 @@
       <div class="header__wrapper">
         <!-- LOGO -->
         <div class="logo-wrapper">
-          <a class="logo link" href="./index" aria-label="filmoteka logo">
+          <a class="logo link" aria-label="filmoteka logo">
             <svg class="logo__icon" width="24" height="24">
               <use href="./images/sprite.svg#film"></use>
             </svg>
-            <span class="logo__text">Filmoteka </span>
+            <span class="logo__text">Filmoteka</span>
           </a>
         </div>
         <!-- SITE NAVIGATION - HOME/LIBRARY BUTTONS -->
