--- a/src/sass/layout/_header-search.scss
+++ b/src/sass/layout/_header-search.scss
@@ -64,7 +64,9 @@ header {
     transition: All 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
-
+.logo {
+  cursor: pointer;
+}
 .site-nav {
   margin-left: auto;
   display: block;
@@ -82,6 +84,9 @@ header {
   border: none;
   padding: 5px 0 0 0;
   cursor: pointer;
+}
+.header-button:hover {
+  color: #ff6b01;
 }
 
 .home-button {
