скрыл кнопки в галереи

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -79,3 +79,9 @@
   opacity: 1;
   transform: translateY(0);
 }
+.centrBtn {
+  display: flex;
+  margin: auto;
+  align-items: center;
+  justify-content: center;
+}
