--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -2,5 +2,6 @@
   <div class="container">
     <ul class="list movies__list"></ul>
     <div id="sentinel"></div>
+    <button class="button activeBtn centrBtn" id="loadMore">Load more</button>
   </div>
 </section>
