--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,7 @@
 @import './components/modal-card';
 @import './components/headeMicrophone';
 @import './components/button';
+@import './components/button__load-more';
 
 @import './components/footer_modal_students';
 @import './components/btn-change-theme';
