добавил кнопки поиска

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -57,7 +57,7 @@
       <!-- WATCHED/QUEUE BUTTONS -->
       <div class="button-container">
         <!-- оставила класс без visually-hidden для демонстрации -->
-        <button class="button watched-button visually-hidden activeBtn" type="button">
+        <button class="button watched-button visually-hidden activeBtn mr" type="button">
           WATCHED
         </button>
         <button class="button queue-button visually-hidden" type="button">QUEUE</button>
