--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -3,5 +3,8 @@
     <ul class="list movies__list"></ul>
     <div id="sentinel"></div>
     <button class="button activeBtn centrBtn" id="loadMore">Load more</button>
+    <button class="button activeBtn centrBtn visually-hidden" id="loadMoreToSearch">
+      Load more
+    </button>
   </div>
 </section>
