--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -13,9 +13,6 @@
   background-color: transparent;
   cursor: pointer;
   transition: All 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:not(:last-child) {
-    margin-right: 15px;
-  }
 
   &:active {
     top: 0.3em;
@@ -84,4 +81,7 @@
   margin: auto;
   align-items: center;
   justify-content: center;
+}
+.mr {
+  margin-right: 15px;
 }
