--- a/src/sass/components/_footer_modal_students.scss
+++ b/src/sass/components/_footer_modal_students.scss
@@ -43,7 +43,9 @@
   // display: block;
     padding: 40px 15px;
     text-align: center;
-    background-color: rgb(224, 224, 224);
+    // background-color: rgb(224, 224, 224);
+    background-color: white;
+    border-radius: 10px;
     height: 500px;
     overflow-y: scroll;
 }
