пофиксила модалку футера + темная тема
- выровняла модалку футера
- изменила цвет темной темы и кнопки switch
- выровняла кнопку Load Moreпо центру(в мобильной версии)
- увеличила размер модалки фильма в мобильной версии

--- a/src/partials/footer_modal_students.html
+++ b/src/partials/footer_modal_students.html
@@ -7,7 +7,7 @@
     </button>
     <section class="modal__content__footer">
       <ul class="students-list">
-        <li>
+        <li class="students-list__item">
           <!-- <img src="https://blog.123rf.com/wp-content/uploads/2016/10/Caricature8f.jpg" class="students-list__item__image"/> -->
           <img
             src="https://raw.githubusercontent.com/od-frontender/filmoteka/main/src/images/footer_modal_students/Anatoliy%20Buriak.png"
@@ -118,7 +118,7 @@
           </div>
         </li>
         <li class="students-list__item">
-          <a href="https://github.com/od-frontender/filmoteka">
+          <a href="https://github.com/od-frontender/filmoteka" class="link">
             <img
               src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png"
               class="students-list__item__image"
