--- a/src/sass/components/_modal-card.scss
+++ b/src/sass/components/_modal-card.scss
@@ -12,7 +12,7 @@ img {
   left: 49.4%; 
   transform: translateX(-50%);
   width: 280px;
-  // height: 958px;
+  height: 958px;
   padding: 48px 20px 40px 20px;
   background-color: #ffffff;
 }
