--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -77,10 +77,15 @@
   transform: translateY(0);
 }
 .centrBtn {
+  // display: block;
+  // margin: 0 auto;
   display: flex;
   margin: auto;
   align-items: center;
   justify-content: center;
+  &:not(:last-child) {
+    margin-right: auto; //Анна: выровняла кнопку по центру в мобильной версии
+  }
 }
 .mr {
   margin-right: 15px;
