--- a/src/templates/modal-card.hbs
+++ b/src/templates/modal-card.hbs
@@ -1,9 +1,5 @@
 <div class='modal' id="{{id}}">
-  <button type='button' class='modal__close-button'>
-    {{!-- <svg class='modal__close-icon' width='14' height='14'>
-      <use href='../images/vector.svg'></use>
-    </svg> --}}
-  </button>
+  <button type='button' class='modal__close-button'></button>
 
   <div class='modal-wrap'>
     <img
