добавила фото студента
-фото Димы М.

--- a/src/partials/footer_modal_students.html
+++ b/src/partials/footer_modal_students.html
@@ -10,7 +10,7 @@
         <li class="students-list__item">
           <!-- <img src="https://blog.123rf.com/wp-content/uploads/2016/10/Caricature8f.jpg" class="students-list__item__image"/> -->
           <img
-            src="https://raw.githubusercontent.com/od-frontender/filmoteka/main/src/images/footer_modal_students/Anatoliy%20Buriak.png"
+            src="https://raw.githubusercontent.com/od-frontender/filmoteka/main/src/images/footer_modal_students/Anatoliy%20Buriak.jpg"
             class="students-list__item__image"
           />
           <div class="students-list__item__descr">
@@ -105,7 +105,7 @@
 
         <li class="students-list__item">
           <img
-            src="https://blog.123rf.com/wp-content/uploads/2016/10/Caricature8f.jpg"
+            src="https://raw.githubusercontent.com/od-frontender/filmoteka/main/src/images/footer_modal_students/Dima%20Muzalevskiy.jpg"
             class="students-list__item__image"
           />
           <div class="students-list__item__descr">
